--- a/lesson15/lesson15_3.ipynb
+++ b/lesson15/lesson15_3.ipynb
@@ -2722,6 +2722,639 @@
     "scores_df['平均'] = total_series / 5.0#增加平均\n",
     "display(scores_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "國文     62.0\n",
+       "英文     55.0\n",
+       "數學     61.0\n",
+       "地理     52.0\n",
+       "歷史     64.0\n",
+       "總分    294.0\n",
+       "平均     58.8\n",
+       "Name: 10, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "國文     62.0\n",
+       "英文     55.0\n",
+       "數學     61.0\n",
+       "地理     52.0\n",
+       "歷史     64.0\n",
+       "總分    294.0\n",
+       "平均     58.8\n",
+       "Name: 10, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(scores_df.loc[10])#抓列的資料\n",
+    "display(scores_df.iloc[9])#抓列的資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>97</td>\n",
+       "      <td>95</td>\n",
+       "      <td>71</td>\n",
+       "      <td>80</td>\n",
+       "      <td>71</td>\n",
+       "      <td>414</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>66</td>\n",
+       "      <td>99</td>\n",
+       "      <td>427</td>\n",
+       "      <td>85.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>99</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>87</td>\n",
+       "      <td>70</td>\n",
+       "      <td>378</td>\n",
+       "      <td>75.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66</td>\n",
+       "      <td>81</td>\n",
+       "      <td>89</td>\n",
+       "      <td>65</td>\n",
+       "      <td>87</td>\n",
+       "      <td>388</td>\n",
+       "      <td>77.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>69</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79</td>\n",
+       "      <td>61</td>\n",
+       "      <td>51</td>\n",
+       "      <td>311</td>\n",
+       "      <td>62.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>75</td>\n",
+       "      <td>62</td>\n",
+       "      <td>92</td>\n",
+       "      <td>94</td>\n",
+       "      <td>77</td>\n",
+       "      <td>400</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>84</td>\n",
+       "      <td>55</td>\n",
+       "      <td>59</td>\n",
+       "      <td>50</td>\n",
+       "      <td>92</td>\n",
+       "      <td>340</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>86</td>\n",
+       "      <td>92</td>\n",
+       "      <td>418</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>61</td>\n",
+       "      <td>64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>52</td>\n",
+       "      <td>70</td>\n",
+       "      <td>331</td>\n",
+       "      <td>66.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>62</td>\n",
+       "      <td>55</td>\n",
+       "      <td>61</td>\n",
+       "      <td>52</td>\n",
+       "      <td>64</td>\n",
+       "      <td>294</td>\n",
+       "      <td>58.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    國文  英文  數學  地理  歷史   總分    平均\n",
+       "1   97  95  71  80  71  414  82.8\n",
+       "2   87  80  95  66  99  427  85.4\n",
+       "3   99  58  64  87  70  378  75.6\n",
+       "4   66  81  89  65  87  388  77.6\n",
+       "5   69  51  79  61  51  311  62.2\n",
+       "6   75  62  92  94  77  400  80.0\n",
+       "7   84  55  59  50  92  340  68.0\n",
+       "8   66  85  89  86  92  418  83.6\n",
+       "9   61  64  84  52  70  331  66.2\n",
+       "10  62  55  61  52  64  294  58.8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#slice\n",
+    "scores_df.loc[1:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>97</td>\n",
+       "      <td>95</td>\n",
+       "      <td>71</td>\n",
+       "      <td>80</td>\n",
+       "      <td>71</td>\n",
+       "      <td>414</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>99</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>87</td>\n",
+       "      <td>70</td>\n",
+       "      <td>378</td>\n",
+       "      <td>75.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>69</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79</td>\n",
+       "      <td>61</td>\n",
+       "      <td>51</td>\n",
+       "      <td>311</td>\n",
+       "      <td>62.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>84</td>\n",
+       "      <td>55</td>\n",
+       "      <td>59</td>\n",
+       "      <td>50</td>\n",
+       "      <td>92</td>\n",
+       "      <td>340</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>61</td>\n",
+       "      <td>64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>52</td>\n",
+       "      <td>70</td>\n",
+       "      <td>331</td>\n",
+       "      <td>66.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   國文  英文  數學  地理  歷史   總分    平均\n",
+       "1  97  95  71  80  71  414  82.8\n",
+       "3  99  58  64  87  70  378  75.6\n",
+       "5  69  51  79  61  51  311  62.2\n",
+       "7  84  55  59  50  92  340  68.0\n",
+       "9  61  64  84  52  70  331  66.2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#使用list\n",
+    "scores_df.loc[[1, 3, 5, 7, 9]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>97</td>\n",
+       "      <td>95</td>\n",
+       "      <td>71</td>\n",
+       "      <td>80</td>\n",
+       "      <td>71</td>\n",
+       "      <td>414</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>66</td>\n",
+       "      <td>99</td>\n",
+       "      <td>427</td>\n",
+       "      <td>85.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>99</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>87</td>\n",
+       "      <td>70</td>\n",
+       "      <td>378</td>\n",
+       "      <td>75.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66</td>\n",
+       "      <td>81</td>\n",
+       "      <td>89</td>\n",
+       "      <td>65</td>\n",
+       "      <td>87</td>\n",
+       "      <td>388</td>\n",
+       "      <td>77.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>69</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79</td>\n",
+       "      <td>61</td>\n",
+       "      <td>51</td>\n",
+       "      <td>311</td>\n",
+       "      <td>62.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>75</td>\n",
+       "      <td>62</td>\n",
+       "      <td>92</td>\n",
+       "      <td>94</td>\n",
+       "      <td>77</td>\n",
+       "      <td>400</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>84</td>\n",
+       "      <td>55</td>\n",
+       "      <td>59</td>\n",
+       "      <td>50</td>\n",
+       "      <td>92</td>\n",
+       "      <td>340</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>86</td>\n",
+       "      <td>92</td>\n",
+       "      <td>418</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>61</td>\n",
+       "      <td>64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>52</td>\n",
+       "      <td>70</td>\n",
+       "      <td>331</td>\n",
+       "      <td>66.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>62</td>\n",
+       "      <td>55</td>\n",
+       "      <td>61</td>\n",
+       "      <td>52</td>\n",
+       "      <td>64</td>\n",
+       "      <td>294</td>\n",
+       "      <td>58.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    國文  英文  數學  地理  歷史   總分    平均\n",
+       "1   97  95  71  80  71  414  82.8\n",
+       "2   87  80  95  66  99  427  85.4\n",
+       "3   99  58  64  87  70  378  75.6\n",
+       "4   66  81  89  65  87  388  77.6\n",
+       "5   69  51  79  61  51  311  62.2\n",
+       "6   75  62  92  94  77  400  80.0\n",
+       "7   84  55  59  50  92  340  68.0\n",
+       "8   66  85  89  86  92  418  83.6\n",
+       "9   61  64  84  52  70  331  66.2\n",
+       "10  62  55  61  52  64  294  58.8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>60</td>\n",
+       "      <td>98</td>\n",
+       "      <td>95</td>\n",
+       "      <td>86</td>\n",
+       "      <td>61</td>\n",
+       "      <td>400</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>73</td>\n",
+       "      <td>69</td>\n",
+       "      <td>66</td>\n",
+       "      <td>90</td>\n",
+       "      <td>79</td>\n",
+       "      <td>377</td>\n",
+       "      <td>75.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>94</td>\n",
+       "      <td>66</td>\n",
+       "      <td>72</td>\n",
+       "      <td>95</td>\n",
+       "      <td>82</td>\n",
+       "      <td>409</td>\n",
+       "      <td>81.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>51</td>\n",
+       "      <td>89</td>\n",
+       "      <td>55</td>\n",
+       "      <td>94</td>\n",
+       "      <td>82</td>\n",
+       "      <td>371</td>\n",
+       "      <td>74.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>77</td>\n",
+       "      <td>71</td>\n",
+       "      <td>93</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>387</td>\n",
+       "      <td>77.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>73</td>\n",
+       "      <td>90</td>\n",
+       "      <td>98</td>\n",
+       "      <td>95</td>\n",
+       "      <td>75</td>\n",
+       "      <td>431</td>\n",
+       "      <td>86.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>79</td>\n",
+       "      <td>94</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>65</td>\n",
+       "      <td>408</td>\n",
+       "      <td>81.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>87</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>80</td>\n",
+       "      <td>97</td>\n",
+       "      <td>409</td>\n",
+       "      <td>81.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>64</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "      <td>91</td>\n",
+       "      <td>61</td>\n",
+       "      <td>394</td>\n",
+       "      <td>78.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>59</td>\n",
+       "      <td>75</td>\n",
+       "      <td>73</td>\n",
+       "      <td>98</td>\n",
+       "      <td>58</td>\n",
+       "      <td>363</td>\n",
+       "      <td>72.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    國文  英文  數學  地理  歷史   總分    平均\n",
+       "41  60  98  95  86  61  400  80.0\n",
+       "42  73  69  66  90  79  377  75.4\n",
+       "43  94  66  72  95  82  409  81.8\n",
+       "44  51  89  55  94  82  371  74.2\n",
+       "45  77  71  93  74  72  387  77.4\n",
+       "46  73  90  98  95  75  431  86.2\n",
+       "47  79  94  80  90  65  408  81.6\n",
+       "48  87  71  74  80  97  409  81.8\n",
+       "49  64  90  88  91  61  394  78.8\n",
+       "50  59  75  73  98  58  363  72.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#前10筆\n",
+    "display(scores_df.iloc[:10])\n",
+    "#最後10筆\n",
+    "display(scores_df.iloc[-10:])\n"
+   ]
   }
  ],
  "metadata": {
